fix : app loaderalignment

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 .loaderWrap {
-  background-color: aqua;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  width: 100dvw;
+  height: 100vh;
+  height: 100dvh;
 }
